src/com/idearisk/Asterisk.bnf
{
  parserClass="com.idearisk.parser.AsteriskParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Asterisk"
  psiImplClassSuffix="Impl"
  psiPackage="com.idearisk.psi"
  psiImplPackage="com.idearisk.psi.impl"

  elementTypeHolderClass="com.idearisk.psi.AsteriskTypes"
  elementTypeClass="com.idearisk.psi.AsteriskElementType"
  tokenTypeClass="com.idearisk.psi.AsteriskTokenType"
}

asteriskFile ::= item_*

private item_ ::= (STATEMENT|COMMENT|CRLF)

STATEMENT ::= INCLUDE_FILE | EXTENSION_DEFINITION | PROGRAM_STATEMENT | INCLUDE_CTX
INCLUDE_FILE ::= (INCLUDE_STMT INCLUDE_FILE_TARGET)
PROGRAM_STATEMENT ::= (EXT_INST_LEFT EXT_OPERATOR EXT_EXTENSION SEPARATOR EXT_PRIORITY SEPARATOR APPLICATION_NAME APPLICATION_ARGS)
INCLUDE_CTX ::= (INCLUDE_CTX_LEFT INCLUDE_CTX_OPERATOR INCLUDE_CTX_CONTEXT)
